wp_contextual/tests/error_wp_contextual_option_without_wp_context.stderr
error: #[WPContextualOption] doesn't have any contexts. Did you forget to add #[WPContext] attribute?
 --> tests/error_wp_contextual_option_without_wp_context.rs:5:5
  |
5 |     #[WPContextualOption]
  |     ^
